--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-select-virtualized": "^5.6.0",
     "react-virtualized-select": "^3.1.3",
     "react-window": "^1.8.9",
+    "redux-saga": "^1.3.0",
     "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
