--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^2.3.0",
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -24,6 +25,7 @@
     "react-window": "^1.8.9",
     "redux-saga": "^1.3.0",
     "redux-thunk": "^2.4.2",
+    "sockjs-client": "^1.6.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
