--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3004
-REACT_APP_BASE_URL=http://localhost:3004
+REACT_APP_BASE_URL=http://192.168.40.40:3004
 REACT_APP_LOAD_URL=/load
 REACT_APP_TIMETABLE_URL=/timetable
 REACT_APP_TEACHER_SCHEDULE_URL=/teacher-schedule
